[workspace]
members = ["config"]

[package]
name = "drone"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
default-run = "drone"
repository = "https://github.com/drone-os/drone"
homepage = "https://www.drone-os.com/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "async",
    "real-time",
    "bare-metal",
    "rtos",
    "framework",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "os",
]
description = """
CLI utility for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[dependencies.drone-config]
version = "=0.14.0"
path = "config"

[dependencies]
Inflector = "0.11"
ansi_term = "0.12"
anyhow = "1"
env_logger = "0.8"
handlebars = "3"
libc = "0.2"
log = "0.4"
prettytable-rs = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#signal-hook = "0.2"
structopt = "0.3"
tempfile = "3"
thiserror = "1"
toml = "0.5"
walkdir = "2"
futures = "0.3.8"
tokio = { version = "1.5.0", features = ["full"] }
#tokio-serial = { git = "https://github.com/berkowski/tokio-serial", branch = "v4.4.0" }
#
#[patch.crates-io]
mio-serial = { git = "https://github.com/berkowski/mio-serial", branch = "v4.0" }
#async-trait = "0.1.42"
pin-project = "1.0"

[profile.release]
debug = true